# EasySnec

./: .gitattributes  .gitignore  LICENSE  README.md  TODO.md  flake.nix  main.py  pyproject.toml  pysidedeploy.spec
.github/workflows/: build.yml  pr_tests.yml
scripts/: build_nuitka.ps1  build_nuitka.sh  build_pyapp.ps1  build_pyapp.sh
src/easysnec/: __init__.py  app.py  backend.py  grading.py  main.py
src/easysnec/qml/: Main.qml
src/easysnec/ui/: app_window.slint  components.slint  course_editor.slint  datatypes.slint  mock_window.slint  running.slint  settings.slint  theme.slint
src/easysnec/ui/resources/: OopsFace2.xcf  TryAgainFace2.xcf  YayFace2.xcf
src/easysnec/ui/resources/sounds/bad/: bb-nopeSorry.mp3.bak
src/easysnec/utils/: grading.py  qt_interface.py
tests/: conftest.py  test_grading.py
