[project]
name = "easysnec"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"

# ------------- RUN
dependencies = [
    "pyserial>=3.5",
    "sireader>=1.1.3",
    "sportident>=1.2.8",
    "pyxdameraulevenshtein>=1.9.0",
    "pydantic>=2.12.3",
    "slint>=1.9.2",
    "click>=8.3.3",
    "playsound3>=3.3.1",
]
[project.scripts]
easysnec = "easysnec.app:main"



# ------------- TEST
[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "typeguard>=4.4.4",
    "pytest-cov>=7.0.0",
    "nuitka>=2.5",
]
[tool.pytest.ini_options]
addopts = [
    "-ra",
    "-q",
    "--import-mode=importlib",
    "--cov=easysnec",
]
# typeguard-packages = """
#     easysnec
# """


# ------------- BUILD
# Single-binary distribution is handled by Nuitka, not a wheel/sdist build
# backend. See scripts/build_nuitka.sh (macOS/Linux) and
# scripts/build_nuitka.ps1 (Windows), or the "Build binaries" GitHub workflow.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
